@@ -22,31 +22,28 @@ configurations {
 }
 
 dependencies {
-    markdownDoclet "org.jdrupes.mdoclet:doclet:3.1.0"
-    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:2.1.0"
-}
-
-task javadocResources(type: Copy) {
-    into file(docDestinationDir)
-    from ("${rootProject.rootDir}/misc") {
-        include '*.woff2'
-    }
+    markdownDoclet "org.jdrupes.mdoclet:doclet:4.0.0"
+    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:3.0.0"
 }
 
 task apidocs (type: JavaExec) {
     // Does not work on JitPack, no /usr/bin/dot
-    enabled = JavaVersion.current() == JavaVersion.VERSION_17
-
-    dependsOn javadocResources
+    enabled = JavaVersion.current() == JavaVersion.VERSION_21
 
     outputs.dir(docDestinationDir)
     
     inputs.file rootProject.file('overview.md')
-    inputs.file "${rootProject.rootDir}/misc/stylesheet.css"
+    inputs.file "${rootProject.rootDir}/misc/javadoc-overwrites.css"
 
-    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
-               '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
-    main = 'jdk.javadoc.internal.tool.Main'
+    jvmArgs = ['--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED',
+        '-Duser.language=en', '-Duser.region=US']
+    mainClass = 'jdk.javadoc.internal.tool.Main'
 
     gradle.projectsEvaluated {
         // Make sure that other projects' compileClasspaths are resolved
@@ -69,8 +66,8 @@ task apidocs (type: JavaExec) {
             '-package',
             '-use',
             '-linksource',
-            '-link', 'https://docs.oracle.com/en/java/javase/17/docs/api/',
-            '-link', 'https://mnlipp.github.io/jgrapes/latest-release/javadoc/',
+            '-link', 'https://docs.oracle.com/en/java/javase/21/docs/api/',
+            '-link', 'https://jgrapes.org/latest-release/javadoc/',
             '-link', 'https://freemarker.apache.org/docs/api/',
             '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
@@ -88,7 +85,7 @@ task apidocs (type: JavaExec) {
             '-bottom', rootProject.file("misc/javadoc.bottom.txt").text,
             '--allow-script-in-comments',
             '-Xdoclint:-html',
-            '--main-stylesheet', "${rootProject.rootDir}/misc/stylesheet.css",
+            '--add-stylesheet', "${rootProject.rootDir}/misc/javadoc-overwrites.css",
             '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED',
             '-quiet'
             ]
@@ -97,23 +94,46 @@ task apidocs (type: JavaExec) {
     ignoreExitValue true
 }
 
+task testJavadoc(type: Javadoc) {
+    enabled = JavaVersion.current() == JavaVersion.VERSION_21
+
+    source = fileTree(dir: 'testfiles', include: '**/*.java')
+    destinationDir = project.file("build/testfiles-gradle")
+    options.docletpath = configurations.markdownDoclet.files.asType(List)
+    options.doclet = 'org.jdrupes.mdoclet.MDoclet'
+    options.overview = 'testfiles/overview.md'
+    options.addStringOption('Xdoclint:-html', '-quiet')
+
+    options.setJFlags([
+        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED'])
+}
 // Prepare github authentication for plugins
 if (System.properties['org.ajoberstar.grgit.auth.username'] == null) {
     System.setProperty('org.ajoberstar.grgit.auth.username',
-        project.rootProject.properties['repo.access.token'] ?: "nouser")
+        project.rootProject.properties['website.push.token'] ?: "nouser")
 }
 
 gitPublish {
-    repoUri = 'https://github.com/mnlipp/VM-Operator.git'
-    branch = 'gh-pages'
+    repoUri = 'https://github.com/mnlipp/jdrupes.org.git'
+    branch = 'main'
     contents {
+        from("${rootProject.projectDir}/webpages") {
+            include '_layouts/vm-operator.html'
+            include 'vm-operator/**'
+        }
         from("${rootProject.buildDir}/javadoc") {
-            into 'javadoc'
+            into 'vm-operator/javadoc'
         }
         if (!findProject(':org.jdrupes.vmoperator.runner.qemu').isSnapshot
                 && !findProject(':org.jdrupes.vmoperator.manager').isSnapshot) {
             from("${rootProject.buildDir}/javadoc") {
-                into 'latest-release/javadoc'
+                into 'vm-operator/latest-release/javadoc'
             }
         }
     }
